NetBSD Problem Report #28082
From www@www.netbsd.org Mon Nov 8 06:14:05 2004
Return-Path: <www@www.netbsd.org>
Received: by narn.netbsd.org (Postfix, from userid 31301)
id D15AC2525CF; Mon, 8 Nov 2004 06:14:05 +0000 (UTC)
Message-Id: <20041108061405.D15AC2525CF@narn.netbsd.org>
Date: Mon, 8 Nov 2004 06:14:05 +0000 (UTC)
From: michael@nosflow.com
Reply-To: michael@nosflow.com
To: gnats-bugs@gnats.NetBSD.org
Subject: -current sparc ./build.sh fails with usr.sbin/eeprom/eehandler
X-Send-Pr-Version: www-1.0
>Number: 28082
>Category: port-sparc
>Synopsis: -current sparc ./build.sh fails with usr.sbin/eeprom/eehandler
>Confidential: no
>Severity: serious
>Priority: high
>Responsible: port-sparc-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Mon Nov 08 06:15:00 +0000 2004
>Closed-Date: Thu Nov 11 20:24:35 +0000 2004
>Last-Modified: Thu Nov 11 20:24:35 +0000 2004
>Originator: Michael Wolfson
>Release: 2.0_BETA on sparc64
>Organization:
>Environment:
NetBSD ultra 2.0_BETA NetBSD 2.0_BETA (GENERIC) #0: Thu May 20 18:40:11 UTC 2004 autobuild@tgm.netbsd.org:/autobuild/netbsd-2-0/sparc64/OBJ/autobuild/netbsd-2-0/src/sys/arch/sparc64/compile/GENERIC sparc64
>Description:
./build.sh -O /usr/src/obj/sparc/ -T /usr/src/cross/sparc/ -m sparc -u release
[...]
# compile eeprom/eehandlers.o
/usr/src/cross/sparc/bin/sparc--netbsdelf-gcc -O2 -Wall -Wstrict-prototypes -Wm
issing-prototypes -Wpointer-arith -Wno-sign-compare -Wno-traditional -Wno-uninit
ialized -Werror -I/usr/src/src/usr.sbin/eeprom -nostdinc -isystem /usr/src/o
bj/sparc/destdir.sparc/usr/include -c /usr/src/src/usr.sbin/eeprom/eehandler
s.c
/usr/src/src/usr.sbin/eeprom/eehandlers.c: In function `ee_num8':
/usr/src/src/usr.sbin/eeprom/eehandlers.c:192: warning: subscript has type `char
'
/usr/src/src/usr.sbin/eeprom/eehandlers.c: In function `ee_num16':
/usr/src/src/usr.sbin/eeprom/eehandlers.c:218: warning: subscript has type `char
'
/usr/src/src/usr.sbin/eeprom/eehandlers.c: In function `ee_kbdtype':
/usr/src/src/usr.sbin/eeprom/eehandlers.c:398: warning: subscript has type `char
'
>How-To-Repeat:
>Fix:
worked around by removing -Werror when compiling eehandlers.c
>Release-Note:
>Audit-Trail:
From: David Laight <dsl@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: pr/28082 CVS commit: src/usr.sbin/eeprom
Date: Mon, 8 Nov 2004 08:05:20 +0000 (UTC)
Module Name: src
Committed By: dsl
Date: Mon Nov 8 08:05:20 UTC 2004
Modified Files:
src/usr.sbin/eeprom: eehandlers.c
Log Message:
More fallout from removing the (int) casts from ctype.h
Should fix PR/28082
To generate a diff of this commit:
cvs rdiff -r1.9 -r1.10 src/usr.sbin/eeprom/eehandlers.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: dsl@narn.netbsd.org
State-Changed-When: Thu, 11 Nov 2004 20:24:35 +0000
State-Changed-Why:
fixed by eehandlers.c 1.10
>Unformatted:
>Quarter:
>Keywords:
>Date-Required:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.