More fallout from removing the (int) casts from ctype.h Should fix PR/28082